[project]
name = "job_flow"
version = "0.1.0"
description = "Job_Flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
job_flow = "job_flow.main:run"
run_crew = "job_flow.main:run"
train = "job_flow.main:train"
replay = "job_flow.main:replay"
test = "job_flow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
